opam-version: "1.2"
name: "mirage-bootvar-xen"
maintainer: "Magnus Skjegstad <magnus@skjegstad.com>"
authors: "Magnus Skjegstad <magnus@skjegstad.com>"
homepage: "https://github.com/mirage/mirage-bootvar-xen"
bug-reports: "https://github.com/mirage/mirage-bootvar-xen/issues/"
dev-repo: "https://github.com/mirage/mirage-bootvar-xen.git"
license: "ISC"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune" {build & >= "1.0"}
  "mirage-xen" { >= "2.2.0" }
  "lwt" {>="2.4.3"}
  "astring"
  "parse-argv"
]

available: [ ocaml-version >= "4.04.2" ]
